[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-drive-tools"
version = "0.1.0"
description = "Google Drive API tools for reporting and copying folder contents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Austin J. Hardy", email = "nitsuah@users.noreply.github.com"}
]
dependencies = [
    "pandas",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pylint>=2.0",
    "bandit>=1.7",
]

[project.scripts]
drive-copy = "gcp.copy_folder:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.bandit]
exclude_dirs = ["tests", "testing"]
